--- a/digit/templates/home.html
+++ b/digit/templates/home.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Welcome to Home Page</h1>
-    
-</body>
-</html>
+{% extends 'layouts/base.html' %} {% block content %}
+<h1>home</h1>
+<p>Discover <a href="{% url 'blog:index' %}">blog</a></p>
+
+{% endblock %}
