--- a/digit/templates/home.html
+++ b/digit/templates/home.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/base.html' %} {% block content %}
+<title>{% block title %}digit | home {% endblock %}</title>
 <h1>home</h1>
 <p>Discover <a href="{% url 'blog:index' %}">blog</a></p>
 
